update documentation for Maven + JPMS + Java 25
Rewrite README.md for BEAST 3 (build/run instructions, project structure,
What's New section). Update migrate.md and migration-guide.md for Java 25,
Maven build, and JPMS modules. Simplify DevGuideIntelliJ.md to leverage
Maven auto-detection instead of manual library/module setup.